--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <form action="#">
-                    <input type="text" value="Enter email address">
+                    <input type="text" placeholder="Enter email address">
                     <button type="submit">Get early access</button>
                 </form>
             </div>
